--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       line-heigit:1.7;
       ">
       <p>不断成长吧；</p>
+        <a href="myfirstpage">下一页</a>
       </div>
       <div style="
       background-color:#f1f1f1;
