--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <img
-      src="https://s1.328888.xyz/2022/08/07/upJQK.jpg"
+      src="https://s1.328888.xyz/2022/08/07/uqjJB.png"
       alt="开机封面"
-      width="210"
-      height="150"
+      width="192"
+      height="128"
     />
     <p>你好，世界。我是王鑫旺。</p>
   </body>
